--- a/brainstorm/templates/brainstorm/idea_form.html
+++ b/brainstorm/templates/brainstorm/idea_form.html
@@ -1,5 +1,6 @@
 {% if user_can_post %}
 <form action="{% url new_idea subsite.slug %}" method="post">
+    {% csrf_token %}
     <p>
         <label for="title">Title</label>
         <input type="text" id="title" name="title" />
